--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MY_EMAIL_ID = muhammedmidlaj359@gmail.com
 APP_PASSWORD = aglnvogyohzcwwjh
+RAZORPAY_KEY_ID = rzp_test_tHloNTsl1Mok5y	
+RAZORPAY_KEY_SECRET = 9EKXM3bHvQ54zMVtwHcZ6qqi	
