--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "otp-generator": "^4.0.1",
+    "razorpay": "^2.9.2",
     "session": "^0.1.0",
     "sharp": "^0.32.6",
     "sweetalert": "^2.1.2",
